<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/pattern"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="24dp"
        >

        <LinearLayout
            android:id="@+id/item_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:layout_marginBottom="4dp"
                        android:drawablePadding="0dp"
                        android:text="@string/app_name"
                        android:id="@+id/channel_name" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textSize="14sp"
                android:gravity="left"
                android:fontFamily="sans-serif-light"
                android:autoLink="all"
                android:textColorLink="@color/colorPrimary"
                android:text="@string/about_message"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textSize="14sp"
                android:gravity="left"
                android:fontFamily="sans-serif-light"
                android:autoLink="all"
                android:textColorLink="@color/colorPrimary"
                android:text="Email: mcamocci@gmail.com"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textSize="14sp"
                android:gravity="left"
                android:fontFamily="sans-serif-light"
                android:autoLink="all"
                android:textColorLink="@color/colorPrimary"
                android:text="Phone: +255687374009"
                />

            <TextView
                android:textSize="12sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copyrights" />

            <LinearLayout
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/version_title"
                        android:layout_marginRight="12dp"
                        android:id="@+id/time"
                        android:gravity="right" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>




